--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -347,3 +347,17 @@
     -fx-font-size: 11;
 }
 
+#policies {
+    -fx-hgap: 7;
+    -fx-vgap: 3;
+}
+
+#policies .label {
+    -fx-text-fill: white;
+    -fx-background-color: #ef5667;
+    -fx-padding: 1 3 1 3;
+    -fx-border-radius: 2;
+    -fx-background-radius: 2;
+    -fx-font-size: 11;
+}
+
