--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -363,9 +363,9 @@
 }
 .company {
     -fx-text-fill: white;
-    -fx-background-color: #69866F;
-    -fx-padding: 1 3 1 3;
-    -fx-border-radius: 3;
-    -fx-background-radius: 2;
+    -fx-background-color: #FFF8B6;
+    -fx-padding: 1 10 1 10;
+    -fx-border-radius: 10;
+    -fx-background-radius: 10;
     -fx-font-size: 11;
 }
