--- a/src/main/resources/view/PersonListCard.fxml
+++ b/src/main/resources/view/PersonListCard.fxml
@@ -15,7 +15,7 @@
     <columnConstraints>
       <ColumnConstraints hgrow="SOMETIMES" minWidth="10" prefWidth="150" />
     </columnConstraints>
-    <VBox alignment="CENTER_LEFT" minHeight="105" GridPane.columnIndex="0">
+    <VBox alignment="TOP_LEFT" minHeight="105" GridPane.columnIndex="0">
       <padding>
         <Insets top="5" right="5" bottom="10" left="15" />
       </padding>
@@ -29,11 +29,15 @@
         <Label fx:id="name" text="\$first" styleClass="cell_big_label" />
         <Circle fx:id="priorityDot" radius="5"/>
       </HBox>
-      <FlowPane fx:id="tags" />
-      <Label fx:id="phone" styleClass="cell_small_label" text="\$phone" />
-      <Label fx:id="address" styleClass="cell_small_label" text="\$address" />
-      <Label fx:id="email" styleClass="cell_small_label" text="\$email" />
+      <FlowPane fx:id="tags">
+        <padding>
+          <Insets bottom="5"/> <!-- Padding added between tags and company -->
+        </padding>
+      </FlowPane>
       <Label fx:id="company" styleClass="company" text="\$company" minHeight="-Infinity" visible="false" />
+      <Label fx:id="phone" styleClass="cell_small_label" text="\$phone" />
+      <Label fx:id="address" styleClass="cell_small_label" text="\$address" minHeight="-Infinity" visible="false"/>
+      <Label fx:id="email" styleClass="cell_small_label" text="\$email" minHeight="-Infinity" visible="false"/>
     </VBox>
   </GridPane>
 </HBox>
