Revoked changes to fix GUI because of lack of time to create tests to match coverage

--- a/src/main/resources/view/PersonListCard.fxml
+++ b/src/main/resources/view/PersonListCard.fxml
@@ -36,8 +36,8 @@
       </FlowPane>
       <Label fx:id="company" styleClass="company" text="\$company" minHeight="-Infinity" visible="false" />
       <Label fx:id="phone" styleClass="cell_small_label" text="\$phone" />
-      <Label fx:id="address" styleClass="cell_small_label" text="\$address" minHeight="-Infinity" visible="false"/>
-      <Label fx:id="email" styleClass="cell_small_label" text="\$email" minHeight="-Infinity" visible="false"/>
+      <Label fx:id="address" styleClass="cell_small_label" text="\$address" />
+      <Label fx:id="email" styleClass="cell_small_label" text="\$email" />
     </VBox>
   </GridPane>
 </HBox>
