--- a/src/main/resources/view/TaskListCard.fxml
+++ b/src/main/resources/view/TaskListCard.fxml
@@ -26,20 +26,10 @@
                         <Region fx:constant="USE_PREF_SIZE" />
                     </minWidth>
                 </Label>
-               <!-- Here lies the edit of task information -->
-
-                     <!--Label fx:id="mark" styleClass="cell_small_label" text="\$mark" /-->
-
-                    <Label fx:id="name" text="\$first" styleClass="cell_big_label" />
-                    <Label fx:id="description" styleClass="cell_small_label" text="\$description" />
+                <Label fx:id="name" styleClass="cell_big_label" text="\$first" />
             </HBox>
-            <FlowPane fx:id="tags" />
-
-            <!-- Label fx:id="tag" styleClass="cell_small_label" text="\$tag" / -->
-
+            <FlowPane fx:id="status" />
+            <Label fx:id="description" styleClass="cell_small_label" text="\$description" />
         </VBox>
-      <rowConstraints>
-         <RowConstraints />
-      </rowConstraints>
     </GridPane>
 </HBox>
