--- a/src/main/resources/view/PersonListCard.fxml
+++ b/src/main/resources/view/PersonListCard.fxml
@@ -14,24 +14,19 @@
     <columnConstraints>
       <ColumnConstraints hgrow="SOMETIMES" minWidth="10" prefWidth="150" />
     </columnConstraints>
-    <VBox alignment="CENTER_LEFT" minHeight="105" GridPane.columnIndex="0">
-      <padding>
-        <Insets top="5" right="5" bottom="5" left="15" />
-      </padding>
-      <HBox spacing="5" alignment="CENTER_LEFT">
-        <Label fx:id="id" styleClass="cell_big_label">
-          <minWidth>
-            <!-- Ensures that the label text is never truncated -->
-            <Region fx:constant="USE_PREF_SIZE" />
-          </minWidth>
-        </Label>
-        <Label fx:id="name" text="\$first" styleClass="cell_big_label" />
-      </HBox>
-      <FlowPane fx:id="tags" />
-      <Label fx:id="category" styleClass="cell_small_label" text="\$category" />
-      <Label fx:id="phone" styleClass="cell_small_label" text="\$phone" />
-      <Label fx:id="address" styleClass="cell_small_label" text="\$address" />
-      <Label fx:id="email" styleClass="cell_small_label" text="\$email" />
-    </VBox>
+    <GridPane HBox.hgrow="ALWAYS" alignment="CENTER">
+      <columnConstraints>
+        <ColumnConstraints percentWidth="8" fx:id="idColumn" />
+        <ColumnConstraints percentWidth="24" fx:id="nameColumn" />
+        <ColumnConstraints percentWidth="25" fx:id="emailColumn" />
+        <ColumnConstraints percentWidth="23" fx:id="phoneColumn" />
+        <ColumnConstraints percentWidth="20" fx:id="categoryColumn" />
+      </columnConstraints>
+      <Label fx:id="id" styleClass="cell_small_label" GridPane.columnIndex="0" alignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.halignment="CENTER" />
+      <Label fx:id="name" styleClass="cell_small_label" text="\$first" GridPane.columnIndex="1" alignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.halignment="CENTER" />
+      <Label fx:id="email" styleClass="cell_small_label" text="\$email" GridPane.columnIndex="2" alignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.halignment="CENTER" />
+      <Label fx:id="phone" styleClass="cell_small_label" text="\$phone" GridPane.columnIndex="3" alignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.halignment="CENTER" />
+      <Label fx:id="category" styleClass="category-label" text="\$category" GridPane.columnIndex="4" alignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.halignment="CENTER" />
+    </GridPane>
   </GridPane>
 </HBox>
